# SoulKnightModifier

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  qtquickcontrols2.conf
src/data/: save_file_info.cpp  save_file_info.h
src/manager/: save_game_manager.cpp  save_game_manager.h  update_manager.cpp  update_manager.h
src/model/: save_list_model.cpp  save_list_model.h
src/ui/js/: ItemData.js  SeasonData.js  WeaponEvolutionData.js  XmlData.js
src/ui/qml/: About.qml  Main.qml  ManualEdit.qml  QuickEdit.qml  Style.qml  Tutorial.qml  UsefulTool.qml  Util.qml
src/ui/qml/About/: FunctionListDialog.qml  UpdateAnnocementDialog.qml
src/ui/qml/Component/: BottomToolBar.qml  CardView.qml  CategoryTabBar.qml  CharacterChooseDialog.qml  CustomDialog.qml  ItemAddDialog.qml  ItemEdit.qml  JewelryEdit.qml  LevelEdit.qml  LevelEdit2.qml  ModifySwitch.qml  ModifySwitch2.qml  ModifySwitch3.qml  ModifySwitch4.qml  ModifySwitch5.qml  NavigationSideBar.qml  NormalButton.qml  NormalEdit.qml  NormalEdit2.qml  NormalSwitch.qml  SaveFileTabBar.qml  Toast.qml  UpdateDisplayDialog.qml  WeaponChooseDialog.qml
src/ui/qml/QuickEdit/ItemData/: BluePrintUnlock.qml  ItemData.qml  ItemStorage.qml  Jewelry.qml  MythicWeapon.qml
src/ui/qml/QuickEdit/SeasonData/: Basic.qml  Season.qml  SeasonData.qml  SeasonDetail.qml  SeasonDetail2.qml  SeasonDetail3.qml  SeasonDetail4.qml
src/ui/qml/QuickEdit/Statistic/: Statistic.qml
src/ui/qml/QuickEdit/Task/: Task.qml
src/ui/qml/QuickEdit/WeaponEvolution/: WeaponEvolution.qml
src/ui/qml/QuickEdit/Xml/: Basic.qml  Character.qml  Pet.qml  Xml.qml
src/utils/: file_processor.cpp  file_processor.h  json_processor.cpp  json_processor.h  lite_des.cpp  lite_des.h  save_game_processor.cpp  save_game_processor.h
